verify_oop: rax: broken oop in decode_heap_oop

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P5
    • hs13
    • Affects Version/s: hs13
    • Component/s: hotspot
    • None
    • b02
    • x86
    • solaris_10
    • Verified

        I set low priority since VM does not crash. Messages could be bodus.

        % java -d64 -Xcomp -XX:+UseCompressedOops -XX:+VerifyOops -version
        VM option '+UseCompressedOops'
        VM option '+VerifyOops'
        =============== DEBUG MESSAGE: verify_oop: rax: broken oop in decode_heap_oop ================

        =============== DEBUG MESSAGE: verify_oop: rax: broken oop in decode_heap_oop ================

        =============== DEBUG MESSAGE: verify_oop: rax: broken oop in decode_heap_oop ================

        java version "1.7.0-ea-fastdebug"
        Java(TM) SE Runtime Environment (build 1.7.0-ea-fastdebug-b26)
        Java HotSpot(TM) 64-Bit Server VM (build 13.0-b01-2008-04-29-153402.rasbold.hotspot-fastdebug, compiled mode)
        +VerifyOops count: 67805

              Assignee:
              Coleen Phillimore
              Reporter:
              Vladimir Kozlov
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

                Created:
                Updated:
                Resolved:
                Imported:
                Indexed: