6695819: verify_oopx rax: broken oop in decode_heap_oop

Code in gen_subtype_check was encoding rax as an oop on a path where rax was not an oop.

Reviewed-by: never, kvn